plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'java'
}

group = "com.xsasakihaise.hellascontrol"
version = "2.0.0"
archivesBaseName = "hellascontrol"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8) // Forge 1.16.5 requires Java 8
    }
}

minecraft {
    mappings channel: 'official', version: '1.16.5'
}

repositories {
    mavenCentral()
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.42'
}

jar {
    manifest {
        attributes(
                "Specification-Title": "HellasControl",
                "Specification-Vendor": "xSasaki_Haise",
                "Specification-Version": "1",
                "Implementation-Title": "HellasControl",
                "Implementation-Version":"1.0.0",
                "Implementation-Vendor": "xSasaki_Haise"
        )
    }
}